--- a/app/src/main/res/layout/activity_sign_up_parent.xml
+++ b/app/src/main/res/layout/activity_sign_up_parent.xml
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:ems="10"
-                android:hint="First Name"
+                android:hint="First Name Data"
                 android:inputType="textPersonName" />
 
             <EditText
