--- a/app/src/main/res/layout/activity_sign_up_parent.xml
+++ b/app/src/main/res/layout/activity_sign_up_parent.xml
@@ -10,7 +10,7 @@
         android:layout_width="395dp"
         android:layout_height="715dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="75dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:ems="10"
-                android:hint="First Name Data"
+                android:hint="First Name"
                 android:inputType="textPersonName" />
 
             <EditText
@@ -88,7 +88,7 @@
                 android:inputType="textPersonName" />
 
             <EditText
-                android:id="@+id/emailInput"
+                android:id="@+id/email_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
@@ -97,7 +97,7 @@
                 android:inputType="textEmailAddress" />
 
             <EditText
-                android:id="@+id/editText5"
+                android:id="@+id/password_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
@@ -115,14 +115,14 @@
                 android:inputType="textPersonName" />
 
             <Button
-                android:id="@+id/pSignUpbtn"
+                android:id="@+id/SignUpbtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
+                android:background="#5A5AD0"
                 android:text="Sign Up"
-                android:textColor="@android:color/background_light"
-                android:background="#5A5AD0"/>
+                android:textColor="@android:color/background_light" />
 
         </LinearLayout>
 
