--- a/app/src/main/res/layout/activity_tutor_request_recommend.xml
+++ b/app/src/main/res/layout/activity_tutor_request_recommend.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TutorRequestOpen">
+    tools:context=".TutorRequestRecommend">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -44,23 +44,23 @@
             android:layout_width="62dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#32CD32"
-            android:text="Open"
-            android:textStyle="bold" />
+            android:text="Open" />
 
         <Button
             android:id="@+id/viewAppbtn"
             android:layout_width="129dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="View\nApplication" />
+            android:text="View\nApplication"/>
 
         <Button
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Select from\nRecommendation" />
+            android:text="Select from\nRecommendation"
+            android:background="#32CD32"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -85,7 +85,7 @@
                 android:orientation="vertical">
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/parentRequestCard"
+                    android:id="@+id/parentViewApplications"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
@@ -96,34 +96,85 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/parentReqDesctxt"
+                            android:id="@+id/tutorNametxt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
+                            android:text="Ahmad Syahir"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/TutorAgetxt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:text="TextView"
-                            android:textAlignment="center" />
+                            android:textColor="@android:color/background_dark"
+                            tools:text="22 years old" />
+
+                        <TextView
+                            android:id="@+id/tutorExptxt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="3 years as Developer"
+                            android:textColor="@android:color/background_dark" />
+
+                        <TextView
+                            android:id="@+id/tutorEdutxt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Bachelor of Science"
+                            android:textColor="@android:color/background_dark" />
+
+                        <View
+                            android:id="@+id/divider"
+                            android:layout_width="match_parent"
+                            android:layout_height="5dp"
+                            android:layout_weight="2"
+                            android:background="?android:attr/listDivider" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
+                            android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView14"
-                                android:layout_width="match_parent"
+                                android:id="@+id/textView18"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Education Level:"
+                                android:text="Address:"
                                 android:textAlignment="center"
                                 android:textColor="@android:color/background_dark" />
 
                             <TextView
-                                android:id="@+id/eduLvltxt"
-                                android:layout_width="match_parent"
+                                android:id="@+id/TutorAddtxt"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:background="#C0C0C0"
+                                android:text="TextView"
+                                android:textAlignment="center" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView19"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Teaches:"
+                                android:textAlignment="center"
+                                android:textColor="@android:color/background_dark" />
+
+                            <TextView
+                                android:id="@+id/TutorSubstxt"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:text="TextView"
                                 android:textAlignment="center" />
                         </LinearLayout>
@@ -131,76 +182,31 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_margin="5dp"
+                            android:layout_margin="10dp"
                             android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/textView15"
+                            <Button
+                                android:id="@+id/contactTutorbtn"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:layout_marginLeft="20dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginRight="20dp"
                                 android:layout_weight="1"
-                                android:text="Grade:"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/background_dark" />
+                                android:background="#5A5AD0"
+                                android:text="Contact Tutor"
+                                android:textColor="@android:color/background_light" />
 
-                            <TextView
-                                android:id="@+id/gradetxt"
+                            <Button
+                                android:id="@+id/button3"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
                                 android:layout_weight="1"
-                                android:background="#C0C0C0"
-                                android:text="TextView"
-                                android:textAlignment="center" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/textView16"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="Subject:"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/background_dark" />
-
-                            <TextView
-                                android:id="@+id/subjecttxt"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="#C0C0C0"
-                                android:text="TextView"
-                                android:textAlignment="center" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/textView17"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="Location:"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/background_dark" />
-
-                            <TextView
-                                android:id="@+id/loctxt"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="#C0C0C0"
-                                android:text="TextView"
-                                android:textAlignment="center" />
+                                android:background="#5A5AD0"
+                                android:text="Hire"
+                                android:textColor="@android:color/background_light" />
                         </LinearLayout>
                     </LinearLayout>
 
